# template-python-project

./: .pre-commit-config.yaml  cookiecutter.json
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Makefile  pyproject.toml
